--- a/templates/index.html
+++ b/templates/index.html
@@ -3,34 +3,18 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>DB Communication: Friends</title>
+    <title>Email Validation</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="{{url_for('static',filename='css/bootstrap.css')}}" />
     <link rel="stylesheet" type="text/css" media="screen" href="{{url_for('static',filename='css/main.css')}}" />
 </head>
 <body>
     <div class="wrapper">
-        <h1>These are all my friends!</h1>
-        {% for friend in friends%}
-        <div class="friends">
-            <p><span>First name: </span>{{friend["first_name"]}}</p>
-            <p><span>Last name: </span>{{friend["last_name"]}}</p>
-            <p><span>Occupation: </span>{{friend["occupation"]}}</p>
-        </div>
-        {% endfor%}
+        <h1>Email Validation</h1>
         <form action="/add_friend" method="POST">
-            <h1>Add a friend</h1>
             <div class="form-group">
-                <label for="fname">First Name:</label>
-                <input type="text" name="fname" class="form-control" value="{{session['name']}}">
-            </div>
-            <div class="form-group">
-                <label for="lname">Last Name:</label>
-                <input type="text" name="lname" class="form-control" value="{{session['name']}}">
-            </div>
-            <div class="form-group">
-                <label for="occupation">Occupation:</label>
-                <input type="text" name="occupation" class="form-control" value="{{session['name']}}">
+                <label for="email">Email Address:</label>
+                <input type="text" name="email" class="form-control" value="">
             </div>
             <button type="submit" class="btn btn-primary">Add</button>
         </form>
