--- a/static/css/main.css
+++ b/static/css/main.css
@@ -10,7 +10,7 @@
     padding:30px 100px;
 }
 
-form, .friends, h1{
+form, h1, .emails{
     width:400px;
     margin:auto;
 }
@@ -24,16 +24,26 @@ h1{
     margin-bottom:20px;
 }
 
-.friends{
-    border-bottom:1px solid silver;
-    margin-bottom:10px;
+.msg{
+    width:400px;
+    margin:auto;
+    padding:15px;
+    border:1px solid silver;
+    background-color: brown;
+    color:whitesmoke;
 }
 
-.friends p{
-    margin:0px;
+.success{
+    width:400px;
+    margin:auto auto 20px auto;
+    padding:15px;
+    border:1px solid silver;
+    background-color:darkolivegreen;
+    color:whitesmoke;
 }
 
-.friends span{
+.emails span{
+    display: inline-block;
+    margin-left:30px;
     margin-right:30px;
-    color:royalblue;
 }
