--- a/templates/index.html
+++ b/templates/index.html
@@ -11,12 +11,19 @@
 <body>
     <div class="wrapper">
         <h1>Email Validation</h1>
-        <form action="/add_friend" method="POST">
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="msg">{{message}}</div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+        <form action="/process" method="POST">
             <div class="form-group">
                 <label for="email">Email Address:</label>
                 <input type="text" name="email" class="form-control" value="">
             </div>
-            <button type="submit" class="btn btn-primary">Add</button>
+            <button type="submit" class="btn btn-primary">Submit</button>
         </form>
     </div>
 </body>
